manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-82022176
spec:
    ports:
    - port: 8080 
    selector:
        app: 82022176
