manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82022176-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: "82022176.cepg-aa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-82022176
            port:
              number: 8080
        pathType: Prefix
